fix page layout bug

--- a/src/About/About.module.css
+++ b/src/About/About.module.css
@@ -1,4 +1,5 @@
 .main{
     margin-top: 2.5rem;
     margin-bottom: 5rem;
+    padding-right: 1rem;
 }
